Fix initialization mobile links.

--- a/ori/theme/ori_app/src/stories/index.sass
+++ b/ori/theme/ori_app/src/stories/index.sass
@@ -1,6 +1,10 @@
 @import '../styles/conf/_sizes.sass'
 @import '../styles/conf/_breakpoints.sass'
 
+.fillVH.fillVH
+	height: 1px
+	min-height: 600px
+
 .simpleWrapper
 	max-width: 800px
 	min-height: $s144 * 2.5
